# AlphaPilot

./: .gitignore  CHANGELOG.md  CLAUDE.md  PROJECT_STATUS.md  README.md  pyproject.toml
alphapilot/: __init__.py  __main__.py  cli.py  config.py  i18n.py  models.py  server.py  service.py
alphapilot/backtest/: engine.py
alphapilot/data/: __init__.py  bootstrap.py  cache.py  calendar.py  provider_base.py  providers.py  utils.py
alphapilot/journal/: __init__.py  store.py
alphapilot/strategy/: __init__.py  base.py  cache.py  trend20.py
alphapilot/web/: index.html
docs/: data-source-plan.md
launchd/: com.alphapilot.refresh.benchmarks.plist.template  com.alphapilot.refresh.plist.template  com.alphapilot.serve.plist.template
prototypes/alphapilot-v2/: index.html
scripts/: install_benchmarks_launchd.sh  install_launchd.sh  install_serve_launchd.sh  uninstall_benchmarks_launchd.sh  uninstall_launchd.sh
tests/: perf_signal.py  test_backtest.py  test_cache.py  test_cache_status_consistency.py  test_calendar.py  test_config.py  test_dashboard_contract.py  test_dashboard_summary.py  test_freshness.py  test_get_bars_many.py  test_incremental_update.py  test_journal.py  test_keepalive.py  test_launchd_schedule.py  test_models_dashboard.py  test_portfolio_summary.py  test_providers.py  test_real_provider_guard.py  test_refresh_and_etag.py  test_sector_filter.py  test_server.py  test_service.py  test_strategy_registry.py  test_top_picks_fallback.py  test_trend20.py  test_ttl_cache.py  test_watchlist.py
