[project]
name = "alphapilot"
version = "0.1.0"
description = "AlphaPilot Trend20 MVP"
requires-python = ">=3.9"
dependencies = [
  "pandas",
  "numpy",
]

[project.optional-dependencies]
data = [
  "akshare",
  "pyarrow",
]

[project.scripts]
alphapilot = "alphapilot.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
